--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,25 @@
 			<div>10,12 zł </div>
 			<div> product long description here </div>
 		</div>
+		<div class="product">
+			<h1>Product name 1 </h2>
+			<div>10,12 zł </div>
+			<div> product long description here </div>
+		</div>
+		<div class="product">
+			<h1>Product name 1 </h2>
+			<div>10,12 zł </div>
+			<div> product long description here </div>
+		</div>
+		<div class="product">
+			<h1>Product name 1 </h2>
+			<div>10,12 zł </div>
+			<div> product long description here </div>
+		</div>
+		<div class="product">
+			<h1>Product name 1 </h2>
+			<div>10,12 zł </div>
+			<div> product long description here </div>
+		</div>
 	</body>
 </html>
