--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,20 @@
-<!DOCTYPE html >
+﻿<!DOCTYPE html >
 <html>
 	<head>
 		<title> Hello World</title>
-		<link charset="UTF-8">
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css">
 		<script src="services/product-service.js"> </script>
 		<script src="components/product.js"></script>
 	</head>
 
-	<body>
-		<div class="product">
-			<h1>Product name 1 </h2>
-			<div>10,12 zł </div>
-			<div> product long description here </div>
-		</div>
-		<div class="product">
-			<h1>Product name 1 </h2>
-			<div>10,12 zł </div>
-			<div> product long description here </div>
-		</div>
-		<div class="product">
-			<h1>Product name 1 </h2>
-			<div>10,12 zł </div>
-			<div> product long description here </div>
-		</div>
-		<div class="product">
-			<h1>Product name 1 </h2>
-			<div>10,12 zł </div>
-			<div> product long description here </div>
-		</div>
-		<div class="product">
-			<h1>Product name 1 </h2>
-			<div>10,12 zł </div>
-			<div> product long description here </div>
-		</div>
-	</body>
+    <body>
+        <div class="contanier">
+            <div class="section" >
+                 <section id="listing"> </section>
+             </div>
+            <script src="main.js"></script>
+        </div>
+    </body>
 </html>
